--- a/src/components/login-form/login-form.scss
+++ b/src/components/login-form/login-form.scss
@@ -21,7 +21,7 @@
   &__title {
     margin-bottom: 2rem;
   }
-  
+
   .MuiTypography-root.MuiTypography-h4 {
     letter-spacing: 6px;
     color: rgb(0, 179, 255, 0.7);
@@ -31,6 +31,15 @@
   .MuiButtonBase-root.MuiButton-root.MuiButton-outlined {
     letter-spacing: 1px;
     font-weight: 300;
+  }
+
+  .MuiFormControl-root.MuiFormControl-fullWidth.MuiTextField-root {
+    height: 60px;
+    width: 100%;
+  }
+
+  .MuiButtonBase-root.MuiButton-root.MuiButton-outlined {
+    height: 50px;
   }
 }
 
